# createXcrunch

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: checks.yml
src/: cli.rs  lib.rs  main.rs
src/kernels/: keccak256.cl
tests/: test.rs
