[package]
name = "createxcrunch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives = { version = "0.6.2", features = ["rand"] }
byteorder = "1.5.0"
clap = { version = "4.4.18", features = ["cargo", "wrap_help"] }
console = "0.15.8"
fs4 = "0.7.0"
ocl = "0.19.6"
rand = "0.8.5"
rayon = "1.8.1"
separator = "0.4.1"
sha3 = "0.10.8"
terminal_size = "0.3.0"
tiny-keccak = "2.0.2"
